// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Main Components matches dashboard 1`] = `
<section
  className="pb-5"
>
  <div
    className="header"
  >
    <div
      className="container-md"
    >
      <div
        className="row"
        style={
          Object {
            "alignItems": "center",
            "margin": "5px",
          }
        }
      >
        <div
          className="col-md-6 col-6"
        >
          <h4>
            Stock Metrics
          </h4>
        </div>
        <div
          className="col-md-6 col-4"
        >
          <div
            className="arrangeRow row"
          >
            <div
              className="col"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 624c93.9 0 170-75.2 170-168V232c0-92.8-76.1-168-170-168s-170 75.2-170 168v224c0 92.8 76.1 168 170 168zm330-170c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8 0 140.3-113.7 254-254 254S258 594.3 258 454c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8 0 168.7 126.6 307.9 290 327.6V884H326.7c-13.7 0-24.7 14.3-24.7 32v36c0 4.4 2.8 8 6.2 8h407.6c3.4 0 6.2-3.6 6.2-8v-36c0-17.7-11-32-24.7-32H548V782.1c165.3-18 294-158 294-328.1z"
                />
              </svg>
            </div>
            <div
              className="col"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.967 276.8c1.06-6.235 1.06-13.518 1.06-20.8s-1.06-13.518-1.06-20.8l44.667-34.318c4.26-3.118 5.319-8.317 2.13-13.518L418.215 115.6c-2.129-4.164-8.507-6.235-12.767-4.164l-53.186 20.801c-10.638-8.318-23.394-15.601-36.16-20.801l-7.448-55.117c-1.06-4.154-5.319-8.318-10.638-8.318h-85.098c-5.318 0-9.577 4.164-10.637 8.318l-8.508 55.117c-12.767 5.2-24.464 12.482-36.171 20.801l-53.186-20.801c-5.319-2.071-10.638 0-12.767 4.164L49.1 187.365c-2.119 4.153-1.061 10.399 2.129 13.518L96.97 235.2c0 7.282-1.06 13.518-1.06 20.8s1.06 13.518 1.06 20.8l-44.668 34.318c-4.26 3.118-5.318 8.317-2.13 13.518L92.721 396.4c2.13 4.164 8.508 6.235 12.767 4.164l53.187-20.801c10.637 8.318 23.394 15.601 36.16 20.801l8.508 55.117c1.069 5.2 5.318 8.318 10.637 8.318h85.098c5.319 0 9.578-4.164 10.638-8.318l8.518-55.117c12.757-5.2 24.464-12.482 36.16-20.801l53.187 20.801c5.318 2.071 10.637 0 12.767-4.164l42.549-71.765c2.129-4.153 1.06-10.399-2.13-13.518l-46.8-34.317zm-158.499 52c-41.489 0-74.46-32.235-74.46-72.8s32.971-72.8 74.46-72.8 74.461 32.235 74.461 72.8-32.972 72.8-74.461 72.8z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="marginCreate container"
  >
    <div
      className="row justify-content-center align-content-center mx-lg-5 mt-5 row"
    >
       
      <span
        aria-busy={true}
        aria-live="polite"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</section>
`;

exports[`Check Main Components matches details 1`] = `
<section
  className="pb-5"
>
  <div
    className="header"
  >
    <div
      className="container-md"
    >
      <div
        className="row"
        style={
          Object {
            "alignItems": "left",
            "margin": "5px",
          }
        }
      >
        <div
          className="col-md-1 col-2"
        >
          <svg
            fill="currentColor"
            height={25}
            onClick={[Function]}
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
                "cursor": "pointer",
                "float": "left",
                "marginTop": "0.3rem",
              }
            }
            viewBox="0 0 1024 1024"
            width={25}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M872 474H286.9l350.2-304c5.6-4.9 2.2-14-5.2-14h-88.5c-3.9 0-7.6 1.4-10.5 3.9L155 487.8a31.96 31.96 0 0 0 0 48.3L535.1 866c1.5 1.3 3.3 2 5.2 2h91.5c7.4 0 10.8-9.2 5.2-14L286.9 550H872c4.4 0 8-3.6 8-8v-60c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </div>
        <div
          className="col-md-5 col-6"
        >
          <h4>
            Company Details
          </h4>
        </div>
        <div
          className="col-md-6 col-4"
        >
          <div
            className="arrangeRow row"
          >
            <div
              className="col"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 1024 1024"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 624c93.9 0 170-75.2 170-168V232c0-92.8-76.1-168-170-168s-170 75.2-170 168v224c0 92.8 76.1 168 170 168zm330-170c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8 0 140.3-113.7 254-254 254S258 594.3 258 454c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8 0 168.7 126.6 307.9 290 327.6V884H326.7c-13.7 0-24.7 14.3-24.7 32v36c0 4.4 2.8 8 6.2 8h407.6c3.4 0 6.2-3.6 6.2-8v-36c0-17.7-11-32-24.7-32H548V782.1c165.3-18 294-158 294-328.1z"
                />
              </svg>
            </div>
            <div
              className="col"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M413.967 276.8c1.06-6.235 1.06-13.518 1.06-20.8s-1.06-13.518-1.06-20.8l44.667-34.318c4.26-3.118 5.319-8.317 2.13-13.518L418.215 115.6c-2.129-4.164-8.507-6.235-12.767-4.164l-53.186 20.801c-10.638-8.318-23.394-15.601-36.16-20.801l-7.448-55.117c-1.06-4.154-5.319-8.318-10.638-8.318h-85.098c-5.318 0-9.577 4.164-10.637 8.318l-8.508 55.117c-12.767 5.2-24.464 12.482-36.171 20.801l-53.186-20.801c-5.319-2.071-10.638 0-12.767 4.164L49.1 187.365c-2.119 4.153-1.061 10.399 2.129 13.518L96.97 235.2c0 7.282-1.06 13.518-1.06 20.8s1.06 13.518 1.06 20.8l-44.668 34.318c-4.26 3.118-5.318 8.317-2.13 13.518L92.721 396.4c2.13 4.164 8.508 6.235 12.767 4.164l53.187-20.801c10.637 8.318 23.394 15.601 36.16 20.801l8.508 55.117c1.069 5.2 5.318 8.318 10.637 8.318h85.098c5.319 0 9.578-4.164 10.638-8.318l8.518-55.117c12.757-5.2 24.464-12.482 36.16-20.801l53.187 20.801c5.318 2.071 10.637 0 12.767-4.164l42.549-71.765c2.129-4.153 1.06-10.399-2.13-13.518l-46.8-34.317zm-158.499 52c-41.489 0-74.46-32.235-74.46-72.8s32.971-72.8 74.46-72.8 74.461 32.235 74.461 72.8-32.972 72.8-74.461 72.8z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="marginCreate container"
  >
    <div
      className="row justify-content-center align-content-center mx-lg-5 mt-5 row"
    >
       
      <span
        aria-busy={true}
        aria-live="polite"
      >
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
        <span
          className="react-loading-skeleton"
          style={
            Object {
              "--base-color": "#272e48",
              "--highlight-color": "#f8f9f9",
            }
          }
        >
          ‌
        </span>
        <br />
      </span>
    </div>
  </div>
</section>
`;
